Added other CSS elements
This improves the pic and text layout per instructor.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,14 @@ img {
 
 }
 
+.instructors {
+	clear: both;
+}
+
 .coaches {
 	float: left;
 	clear: both;
+	margin: 0;
+	padding: 0;
+	position: relative;
 }
