--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,3 +1,16 @@
 img {
 	width: 15rem;
+
+}
+
+.instructors {
+	clear: both;
+}
+
+.coaches {
+	float: left;
+	clear: both;
+	margin: 0;
+	padding: 0;
+	position: relative;
 }
