Add styles to home page

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,86 +1,91 @@
+/*   BEGIN GRID 4 SYSTEM   */
+/*  SECTIONS  */
+.section {
+	clear: both;
+	padding: 0px;
+	margin: 0px;
+}
+
+/*  COLUMN SETUP  */
+.col {
+	display: block;
+	float:left;
+	margin: 1% 0 1% 1.6%;
+}
+
+.col:first-child { margin-left: 0; }
+
+/*  GROUPING  */
+.group:before,
+.group:after { content:""; display:table; }
+.group:after { clear:both;}
+.group { zoom:1; /* For IE 6/7 */ }
+
+/*  GRID OF FOUR  */
+.span_4_of_4 {
+	width: 100%;
+}
+
+.span_3_of_4 {
+	width: 74.6%;
+}
+
+.span_2_of_4 {
+	width: 49.2%;
+}
+
+.span_1_of_4 {
+	width: 23.8%;
+}
+
+/*  GO FULL WIDTH BELOW 480 PIXELS */
+@media only screen and (max-width: 480px) {
+	.col {  margin: 1% 0 1% 0%; }
+	.span_1_of_4, .span_2_of_4, .span_3_of_4, .span_4_of_4 { width: 100%; }
+}
+/*   END GRID 4 SYSTEM   */
+
+
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Cutive', serif;
+    margin-left: 8vw;
+    margin-right: 8vw;
 }
 
-code {
-    border-left: 3px solid green;
-    background-color: lightgrey;
-    padding: 5px;
+header {
+         justify-content: center;
+         align-items: center
 }
 
-footer {
-    text-align: center;
-    border: 1px solid black;
+header img {
+    max-width: 10%;
+    height: auto;
+    left: 0px;
+    right: 0px;
+    align-content: center;
 }
 
-.brown {
-    background-color:  #523e33;
+header h1 {
+    float: right;
+    padding-top: 20px;
+ }
+
+.intro-head img {
+    max-width: 100%;
+    height: auto;
+ 
+}
+nav {
+    background-color: #94c840;
+
 }
 
-.brown-light {
-    background-color:  #94877e;
+nav li {
+    text-decoration: none;
+    display: inline-block;
 }
 
-.green {
-    background-color:  #94c840;
+nav li a {
+    text-decoration: none;
+    padding: 20px;
 }
-
-.green-light {
-    background-color:  #d6e8b8;
-}
-
-p { 
-    font-size: 14px;
-    color: #808080;
-}
-section {
-    margin: 20px;
-}
-
-.typography section {
-    margin: 0;
-}
-section h2 {
-    color:  #666666;
-    border-bottom: 1.5px solid #666666;
-}
-.head-style h1 {
-    font-size: 2em;
-    color:  #94c840;
-}
-.head-style h2 {
-    font-size: 1.5em;
-    color:  #94c840;
-    border: none;
-}
-.head-style h3 {
-    color:  #523e33;
-}
-.head-style h4 {
-    color:  #94c840;
-}
-
-.colors div {
-    width: 100px;
-    padding: 10px;
-}
-
-.btn-default {
-    background: #94c840;
-    padding: 8px 20px 8px 20px;
-    border-radius: 6px;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-.btn-hover {
-    background: #d6e8b8;
-    padding: 8px 20px 8px 20px;
-    border-radius: 6px;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-
