--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,4 +1,4 @@
-/*   BEGIN GRID 4 SYSTEM   */
+/*   BEGIN 4 GRID  */
 /*  SECTIONS  */
 .section {
 	clear: both;
@@ -43,7 +43,7 @@
 	.col {  margin: 1% 0 1% 0%; }
 	.span_1_of_4, .span_2_of_4, .span_3_of_4, .span_4_of_4 { width: 100%; }
 }
-/*   END GRID 4 SYSTEM   */
+/*   END 4 GRID   */
 
 
 body {
@@ -53,8 +53,8 @@ body {
 }
 
 header {
-         justify-content: center;
-         align-items: center
+   justify-content: center;
+   align-items: center
 }
 
 header img {
@@ -62,7 +62,6 @@ header img {
     height: auto;
     left: 0px;
     right: 0px;
-    align-content: center;
 }
 
 header h1 {
@@ -70,10 +69,9 @@ header h1 {
     padding-top: 20px;
  }
 
-.intro-head img {
+img {
     max-width: 100%;
     height: auto;
- 
 }
 nav {
     background-color: #94c840;
