--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -10,7 +10,7 @@
 .col {
 	display: block;
 	float:left;
-	margin: 1% 0 1% 1.6%;
+	margin: 1% 0 1% 1.0%;
 }
 
 .col:first-child { margin-left: 0; }
@@ -52,16 +52,9 @@ body {
     margin-right: 8vw;
 }
 
-header {
-   justify-content: center;
-   align-items: center
-}
-
 header img {
     max-width: 10%;
     height: auto;
-    left: 0px;
-    right: 0px;
 }
 
 header h1 {
@@ -71,6 +64,8 @@ header h1 {
 
 nav {
     background-color: #94c840;
+    width: 100%;
+    margin-bottom: 100;
  }
 
 nav li {
@@ -78,36 +73,79 @@ nav li {
     display: inline-block;
     padding: 5px;
 }
-
-nav li:hover {
-    text-decoration: none;
-    display: inline-block;
-    padding: 5px;
-    background-color: #d6e8b8;
-}
-
 nav li a {
     text-decoration: none;
     padding: 20px;
     color: white;
 }
+nav li:hover {
+    text-decoration: none;
+    display: inline-block;
+    padding: 5px;
+    transition: background-color 0.5s ease;
+    background-color: #d6e8b8;
+   
+}
 
-h3 {
+nav li a:hover {
+    text-decoration: none;
+    padding: 20px;
+    transition: color 0.5s ease;
+    color: #523e33;
+}
+
+section a {
+    text-decoration: none;
+    color: aliceblue;
+}
+
+aside h3 {
    color: #94c840;
  }
 
-aside {
-    border: 0.5px solid #523e33;
-    text-align: center;
-}
 .img-container {
     background-image: url("../images/class1.jpg");
     background-size: 100%;
+    
 }
 .intro {
     margin: 20px;
     color: ghostwhite;
-    background-color: aliceblue;
-    opacity: 0.5;
+    background-color: rgba(82, 62, 51, .5);    
+    padding: 10px;
 }
 
+
+.lessons section:nth-child(1) {
+    background-color: #94c840;
+    font-size: 0.9rem;
+    margin: 3;
+    padding: 5px;
+    color: white;
+}
+
+.lessons section:nth-child(2) {
+    background-color: #94c840;
+    font-size: 0.9rem;
+    margin: 3;
+    padding: 5px;
+    color: white;
+}
+
+.policy {
+    border: 1px solid grey;
+    padding: 5px;
+    text-align: center;
+    font-size: 10px;
+    color: dimgrey
+}
+
+button {
+    background: linear-gradient(#94c840, #d6e8b8); 
+    font-family: 'Cutive', serif;
+    color: white;
+    border: 1px solid #94c840;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
