--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -10,7 +10,7 @@
 .col {
 	display: block;
 	float:left;
-	margin: 1% 0 1% 1.0%;
+	margin: 1% 0 1% 1.6%;
 }
 
 .col:first-child { margin-left: 0; }
@@ -25,17 +25,14 @@
 .span_4_of_4 {
 	width: 100%;
 }
-
 .span_3_of_4 {
 	width: 74.6%;
 }
-
 .span_2_of_4 {
 	width: 49.2%;
 }
-
 .span_1_of_4 {
-	width: 23.8%;
+	width: 21.8%;
 }
 
 /*  GO FULL WIDTH BELOW 480 PIXELS */
@@ -48,44 +45,54 @@
 
 body {
     font-family: 'Cutive', serif;
-    margin-left: 8vw;
-    margin-right: 8vw;
+    margin: 0;
 }
 
-header img {
-    width: 9%;
+/* Logo Header Styles */
+
+ header img {
+    width: 6rem;
     height: auto;
+    float: left;
 }
 
 header h1 {
     float: right;
-    padding-top: 25px;
+    color: #523e33;
+    float: right;
+    margin-top: 1.8rem;
  }
+
+/* Navigation Styles */
 
 nav {
     background-color: #94c840;
-    width: 100%;
-    margin-bottom: 100;
+    box-shadow: 0.9px 1px 5px;
  }
+
+nav ul {
+    margin: 0 13%;
+}
 
 nav li {
     text-decoration: none;
     display: inline-block;
     padding: 10px 5px 10px 5px;
-    font-size: 18px;
+    font-size: 17px;
 }
+
 nav li a {
     text-decoration: none;
     padding: 20px;
     color: white;
 }
+
 nav li:hover {
     text-decoration: none;
     display: inline-block;
     padding: 10px 5px 10px 5px;
     transition: background-color 0.5s ease;
     background-color: #d6e8b8;
-   
 }
 
 nav li a:hover {
@@ -95,22 +102,42 @@ nav li a:hover {
     color: #523e33;
 }
 
-section a {
-    text-decoration: none;
-    color: aliceblue;
+/*  Section content styles */
+
+.section {
+    margin: 0 15%;
 }
 
-aside h3 {
-   color: #94c840;
+.section a {
+    text-decoration: none;
+    color: white;
+}
+.section a:hover {
+    text-decoration: none;
+    transition: color 0.5s ease;
+    color: #94c840;
+}
+
+aside {
+    padding: 6px;
+}
+
+aside h4 {
+    color: #94c840;
+ }
+
+aside p {
+    color: grey;
+    font-size: 14px
  }
 
 .img-container {
     background-image: url("../images/class1.jpg");
-    background-size: 100%;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center; 
-  
 }
+
 .intro {
     margin: 20px;
     color: ghostwhite;
@@ -118,23 +145,48 @@ aside h3 {
     padding: 10px;
 }
 
-.intro p {
-}
-
 .lessons section:nth-child(1) {
     background-color: #94c840;
     font-size: 0.9rem;
-    margin: 3;
-    padding: 5px;
+    margin: 3px;
+    padding: 10px;
     color: white;
+    height: auto;
+}
+
+.lessons section:nth-child(1) li {
+    list-style: none;
+    display: inline-block;
+    padding: 10px;
+    border: 1px solid white;
+    border-radius: 5px;    
+}
+
+.lessons section:nth-child(1) li:nth-child(2n) {
+    list-style: none;
+    display: inline-block;
+    padding: 10px;
+    border: none;
 }
 
 .lessons section:nth-child(2) {
     background-color: #94c840;
     font-size: 0.9rem;
-    margin: 3;
-    padding: 5px;
+    margin: 3px;;
+    padding: 10px;
     color: white;
+    height: auto;
+}
+
+.lessons aside {
+    border: 0.5px solid #94c840;
+    font-size: 0.9rem;
+    color: white;
+    text-align: center;
+}
+
+.lessons aside p {
+    color: dimgrey;
 }
 
 .policy {
@@ -145,24 +197,25 @@ aside h3 {
     color: dimgrey;
 }
 
-button {
-    background: linear-gradient(#e6e6e6, #567722); 
+.lessons section:nth-child(1n) a {
+    background: linear-gradient(#82b332, #658b27); 
     font-family: 'Cutive', serif;
     color: white;
     border: none;
     padding: 10px 15px 10px 15px;
     border-radius: 5px;
     cursor: pointer;
-    box-shadow:  1px 1px 10px #0d0d0d;
+    float: right;
+    text-align: center;
 }
 
-button:hover {
-    background: linear-gradient(#e6e6e6, #567722); 
+.lessons section:nth-child(1n) a:hover {
+    background: linear-gradient( #82b332, #658b27); 
     font-family: 'Cutive', serif;
     color: #523e33;
     border: none;
     padding: 10px 15px 10px 15px;
     border-radius: 5px;
     cursor: pointer;
-    box-shadow:  1px 1px 15px #0d0d0d;
+    transition: color 0.5s ease;
 }
